@@ -30,6 +30,7 @@ mk:
     tweet: 'твит'
     activate: 'Активирај'
     deactivate: 'Деактивирај'
+    deactivate_account: 'Дали сте сигурни дека сакате да ја деактивирате вашата сметка?'
     title: "Листа на регистрирани корисници"
     errors:
       private_account: "Вашите твитови се приватни. Треба да го следите {{user}} или вашата сметка да биде јавна за да имаме пристап до вашите твитови. Штом тоа го средите најавете се повторно."
@@ -50,6 +51,7 @@ mk:
 
   buttons:
     create: "Креирај"
+    "yes": "Да"
 
   twitter:
     list:
