@@ -6,6 +6,7 @@ Version 0.3
 
   Dalibor Nasevic <dalibor.nasevic@gmail.com>
   * Implemented category to list functionality (every user can create a list on his twitter account from users in category at 140.mk site)
+  * Added one more step for deactivating account
 
 
   Peco Danajlovski <vortexmk@gmail.com>
